[package]
name = "omni-testing-utilities"
version = "0.1.0"
authors = ["Proximity Labs <hello@proximity.xyz>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
# Near
near-sdk = { version = "5.3.0", features = ["schemars", "abi"] }
near-workspaces = { version = "0.13.0", features = [
    "experimental",
    "unstable",
] }
hex = "0.4.3"
near-jsonrpc-primitives = "0.25.0"
near-primitives = { version = "0.25.0" }
near-crypto = { version = "0.25.0" }
near-jsonrpc-client = { git = "https://github.com/EdsonAlcala/near-jsonrpc-client-rs", tag = "v0.12.1" }
# Bitcoin
bitcoind = { package = "bitcoind-json-rpc-regtest", version = "0.3.0", features = [
    "26_0",
] }
bitcoin = { version = "0.32.0", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
tempfile = "3.3.0"
sha3 = "0.10.8"
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
ripemd = "0.1.3"
# Utilities
serde = "1.0"
serde_json = "1.0"
bs58 = "0.5.1"
